# Orca

./: .gitignore  README.md  VERSION.yaml  package-lock.json  plan.json  proposal.json  to-dos.txt  vendara_chat_test_script.md
ai_engine/: .env.example  README.md  pyproject.toml
ai_engine/src/: __init__.py  config.py  exceptions.py  guardrails.py  message_relevance.py  models.py  repository.py  supabase_client.py
ai_engine/src/agents/: __init__.py  base.py  schemas.py  steps.py
ai_engine/src/context/: __init__.py  builder.py  retrieval.py
ai_engine/src/llm/: __init__.py  client.py  fake.py  gemini.py  rate_limiter.py  schema_smoke.py  smoke.py
ai_engine/src/pipelines/: __init__.py  locks.py  runner.py
ai_engine/src/prompts/: templates.py
ai_engine/src/tasks/: __init__.py  worker.py
ai_engine/src/transcription/: __init__.py  chunker.py  embedder.py  extractor.py  service.py
ai_engine/tests/: conftest.py  test_agent_schemas.py  test_agent_steps.py  test_context_builder.py  test_contracts.py  test_gemini_client.py  test_llm_profiles.py  test_llm_smoke.py  test_pipeline.py  test_repository.py  test_transcript_pipeline_integration.py  test_transcript_retrieval.py  test_transcription_chunker.py  test_transcription_embedder.py  test_transcription_extractor.py  test_transcription_service.py  test_worker.py  test_worker_requeue.py
api/: .env.example  README.md  pyproject.toml
docs/: ai-engine.md  api-guidelines.md  idea.md  implementation-plan.md  ui-ux.md
frameworks/: astro-react-architecture.md
supabase/: AGENTS.md  config.toml  seed.sql
web/: .env.example  AGENTS.md  astro.config.mjs  package-lock.json  package.json  (+1 more)
(+181 files in other folders)
