[project]
name = "orca-ai-engine"
version = "0.1.0"
description = "AI agent pipeline for the Orca planning workspace."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1.0",
  "pydantic-settings>=2.4,<3.0",
  "supabase>=2.15,<3.0",
  "redis>=5.0,<6.0",
  "rq>=1.16,<2.0",
  "google-genai>=0.8,<1.0",
  "pypdf>=4.0,<5.0",
  "python-docx>=1.1,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest-asyncio>=0.23,<1.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
